--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,10 @@
 -r requirements.txt
 fake-factory==0.5.0
-netaddr==0.7.15
+nsot==0.15.6
 py==1.4.26
 pytest==2.7.0
+pytest-django==2.9.1
+pytest-pythonpath==0.6
 requests-mock==0.6.0
 Sphinx==1.3.6
 sphinx-autobuild==0.6.0
