--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
 
 script: py.test -v tests/
 
-#after_success: curl -X POST http://readthedocs.org/build/nsot
+after_success: curl -X POST https://readthedocs.org/build/pynsot
