Update nsot CLI to support natural key for Interfaces/Circuits
Requires NSoT v1.2.0

- Interfaces may now be created/updated by referencing the device
  hostname or device ID
- Circuits may now be created/updated by referencing the interfaces by
  natural key (slug) OR interface ID
- The visual display of Networks, Interfaces, Circuits has been updated to be
  more compact/concise
  - Networks
    - cidr is now displayed instead of network_address/prefix_length
    - parent cidr is now displayed instead of parent_id
  - Interface
    - name_slug is now displayed instead of device_id/name
    - parent name is now displayed instead of parent_id
  - Circuits
    - interface slugs are now displayed instead of ID numbers
- Added flake8 to Travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+cache: pip
 python:
     - "2.7"
 
@@ -6,6 +7,8 @@ install:
     - pip install -r requirements-dev.txt
     - pip install .
 
-script: py.test -v tests/
+script:
+    - flake8
+    - py.test -v tests/
 
 after_success: curl -X POST https://readthedocs.org/build/pynsot
