--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,9 @@
 -r requirements.txt
 fake-factory~=0.5.0
+flake8~=3.3.0
 ipdb~=0.9.3
 ipython~=5.0
-nsot>=1.1.4,~=1.1.0
+nsot>=1.2.0,~=1.2.0
 py~=1.4.26,>=1.4.29
 pytest~=2.7.0
 pytest-django~=2.9.1
