--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,7 @@ fake-factory~=0.5.0
 flake8~=3.3.0
 ipdb~=0.9.3
 ipython~=5.0
-nsoti~=1.4.3
+nsot~=1.4.3
 py~=1.5.2
 pytest~=3.4.1
 pytest-django~=3.1.2
